fix:优化代码-GEN